--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <button type="button" id="btndbName" class="btn btn-warning">
         Double Click Me
       </button>
-      <p id="displayPara"></p>
+      <p id="displayPara">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente saepe iste temporibus nesciunt aliquam, magnam adipisci nostrum eius iusto obcaecati quis placeat eos corporis eveniet quam laboriosam dicta, distinctio ut.</p>
     </div>
     <div>
       <h4>Traffic Lights</h4>
@@ -77,6 +77,9 @@
     <div>
       <h4>Create a list of Hobbies with a prompt box and list them</h4>
       <p>
+        <ul id="listHere">
+
+        </ul>
         <button type="button" id="btnHobbies" class="btn btn-primary">
           Click Me
         </button>
@@ -90,7 +93,7 @@
     </div>
   </main>
   <!-- Custom JavaScript -->
-  <script src=""></script>
+  <script src="./script.js"></script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
